src/tests/testfiles/binary-operators/types-26.txt
Error at 2:5: Logic operator operands must have the same type (have char and int)
'a' && 0;
^
